ghc-4335c07/testsuite/tests/typecheck/should_fail/T12063.hs
module T12063 where
import T12063a
x :: S
x = undefined
